--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation:
 
-    git clone git://github.com/nelstrom/dotvim.git ~/.vim
+    git clone git@github.com:Tivoli/mvim-setup.git ~/.vim
 
 Create symlinks:
 
