--- a/README
+++ b/README
@@ -1,14 +1,13 @@
 Installation:
 
-    git clone git@github.com:Tivoli/mvim-setup.git ~/.vim
+  git clone git@github.com:Tivoli/mvim-setup.git ~/.vim
 
 Create symlinks:
 
-    ln -s ~/.vim/vimrc ~/.vimrc
-    ln -s ~/.vim/gvimrc ~/.gvimrc
+  ln -s ~/.vim/vimrc ~/.vimrc
+  ln -s ~/.vim/gvimrc ~/.gvimrc
 
 Switch to the `~/.vim` directory, and fetch submodules:
 
-    cd ~/.vim
-    git submodule init
-    git submodule update
+  cd ~/.vim
+  git submodule update --init
